# IN5244_CienciadeDatos

./: .gitignore  pyproject.toml
Proyecto/: Documentacion_base_de_datos.md  proyectoIN5244.ipynb  ~$Base_de_datos.xlsx
